--- a/src/main/resources/static/css/estilosTier2.css
+++ b/src/main/resources/static/css/estilosTier2.css
@@ -3,7 +3,7 @@ body {
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 30px;
     margin: 0;
     padding: 0;
 }
@@ -60,4 +60,8 @@ body {
     color: white;
     text-align: center;
     padding: 0.5em;
+}
+
+.qr {
+    width:  32%;
 }
